--- a/frontend/src/components/DishListsFooter/DishListFooter.css
+++ b/frontend/src/components/DishListsFooter/DishListFooter.css
@@ -1,12 +1,9 @@
 .footer-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 175px;
-    background-image: url("../../assets/images/knife-and-fork.svg");
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position: right;
-  }
+  width: 100%;
+  height: 175px;
+  background-image: url("../../assets/images/knife-and-fork.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: right;
+}
 
