--- a/frontend/src/components/DishListsMenu/DishListsMenu.css
+++ b/frontend/src/components/DishListsMenu/DishListsMenu.css
@@ -1,6 +1,6 @@
 .menu-icon {
-    width: 36px; 
-    height: 36px;
+    width: 40px; 
+    height: 40px;
     cursor: pointer;
   }
   
